@@ -1,3 +1,9 @@
+2024-05-16 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/peeph.def,
+	  support/regression/tests/bug-3733.c:
+	  Fix bug #3733.
+
 2024-05-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/sha3-256.c:
